sandbox/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          livenessProbe: # Restart if HA hangs
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 120
            periodSeconds: 60
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: 4Gi
              cpu: 1000m
          volumeMounts:
            - mountPath: /config
              name: config
            - name: home-assistant-config-volume
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ha-config
        - name: home-assistant-config-volume
          configMap:
            name: home-assistant-config
